--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,12 @@ Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 MarkupSafe==3.0.2
+numpy==2.2.0
+scikit-learn==1.6.0
+scipy==1.14.1
 SQLAlchemy==2.0.36
+threadpoolctl==3.5.0
 typing_extensions==4.12.2
 Werkzeug==3.1.3
